# mai-ng

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/agents/: coding-style.md
.github/workflows/: auto-merge.yml  ci.yml  self-healing.yml
docs/: contributing.md  milestones.md  tech-design.md
docs/tasks/: m0-tasks.md  m1-tasks.md  m2-tasks.md  m3-tasks.md  overview.md  progress.md
src/: CMakeLists.txt  main.cpp
src/app/: imgui_backend.cpp  imgui_backend.h  layout.cpp  layout.h  main_loop.cpp  main_loop.h  window.cpp  window.h
src/editor/: text_buffer.cpp  text_buffer.h
src/panels/: assembly_panel.cpp  assembly_panel.h  console_panel.cpp  console_panel.h  debugger_panel.cpp  debugger_panel.h  editor_panel.cpp  editor_panel.h
tests/: CMakeLists.txt  test_main.cpp  test_panels.cpp  test_text_buffer.cpp  test_window.cpp
